--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,49 @@
-@import-normalize; /* bring in normalize.css styles */
+@import-normalize;
 
 body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #ecf0f1;
-	font-family: helvetica, arial, sans-serif;
-	font-size: 16px;
+  font-family: helvetica, arial, sans-serif;
+  font-size: 16px;
+  margin-top: 100px;
+  	background-color: #ecf0f1;
+}
+img,
+ul,
+li,
+a,
+p,
+h1,
+h2 {
+  margin: 0;
+  padding: 0;
+}
+img{
+      display: block;
+}
+ul, li, ol{
+  list-style: none;
+}
+a{
+  color: inherit;
+  text-decoration: none;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.visually-hidden {
+	position: absolute;
+	white-space: nowrap;
+	width: 1px;
+	height: 1px;
+	overflow: hidden;
+	border: 0;
+	padding: 0;
+	clip: rect(0 0 0 0);
+	clip-path: inset(50%);
+	margin: -1px;
 }
