--- a/src/components/Filter/SearchBar.module.css
+++ b/src/components/Filter/SearchBar.module.css
@@ -1,4 +1,4 @@
-@import url('../../images/search.png');
+/* @import url('../../images/search.png'); */
 .Searchbar {
   top: 0;
   left: 0;
@@ -28,6 +28,7 @@
   background-color: #fff;
   border-radius: 3px;
   overflow: hidden;
+      margin: 0 auto;
 }
 
 .SearchFormButton {
