--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,8 @@ body {
   background-color: #ecf0f1;
   font-family: helvetica, arial, sans-serif;
   font-size: 16px;
-  margin-top: 100px;
-  	background-color: #ecf0f1;
+  margin-top: 60px;
+  background-color: #ecf0f1;
 }
 img,
 ul,
@@ -20,13 +20,15 @@ h2 {
   margin: 0;
   padding: 0;
 }
-img{
-      display: block;
+img {
+  display: block;
 }
-ul, li, ol{
+ul,
+li,
+ol {
   list-style: none;
 }
-a{
+a {
   color: inherit;
   text-decoration: none;
 }
@@ -36,14 +38,17 @@ code {
     monospace;
 }
 .visually-hidden {
-	position: absolute;
-	white-space: nowrap;
-	width: 1px;
-	height: 1px;
-	overflow: hidden;
-	border: 0;
-	padding: 0;
-	clip: rect(0 0 0 0);
-	clip-path: inset(50%);
-	margin: -1px;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
+section{
+  padding: 20px 24px;
 }
