--- a/src/index.css
+++ b/src/index.css
@@ -10,13 +10,20 @@ body {
   margin-top: 60px;
   background-color: #ecf0f1;
 }
+*{
+  box-sizing: border-box;
+}
 img,
 ul,
 li,
 a,
 p,
 h1,
-h2 {
+h2,
+h3,
+h4,
+h5,
+article {
   margin: 0;
   padding: 0;
 }
