--- a/src/components/CardItem/CardItem.module.css
+++ b/src/components/CardItem/CardItem.module.css
@@ -54,7 +54,8 @@
 
   background-color: rgba(38, 44, 48, 0.924);
 
-  transition: all 0.3s ease;
+  transition: all 0.5s ease;
+   transition-delay:0.3s;
   transform: translateY(100%);
 }
 .overview::-webkit-scrollbar {
