--- a/src/components/MoviePoster/MoviePoster.module.css
+++ b/src/components/MoviePoster/MoviePoster.module.css
@@ -58,10 +58,14 @@ aside {
   gap: 10px;
 }
 .companies {
-  display: grid;
+  /* display: grid;
   grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-  grid-gap: 1rem;
-  flex-grow: 2;
+  grid-gap: 1rem; */
+  /* flex-grow: 2; */
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 8px;
   align-items: center;
   flex-wrap: wrap;
 }
@@ -69,9 +73,9 @@ aside {
 .companiesLogo {
   width: 100px;
   object-fit: contain;
-  height: 100%;
+  height:77px;
   padding: 10px;
-  background-color: #ffffff;
+  background-color: #FBFAF8;
   border-radius: 10px;
 }
 .locations {
@@ -100,10 +104,15 @@ aside {
   flex-direction: column;
   gap: 10px;
 }
+
 .topAside  h4{
+ text-decoration: underline;
+ text-underline-offset: 4px;
+
+}
+.topAside  h4:first-child{
   margin-bottom: 5px;
 }
-
 .bottomAside {
   display: flex;
   flex-direction: column;
