--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,8 @@ h2,
 h3,
 h4,
 h5,
-article {
+article,
+ol {
   margin: 0;
   padding: 0;
 }
@@ -56,6 +57,6 @@ code {
   clip-path: inset(50%);
   margin: -1px;
 }
-section{
+/* section{
   padding: 20px 24px;
-}
+} */
