--- a/src/components/Filter/SearchBar.module.css
+++ b/src/components/Filter/SearchBar.module.css
@@ -1,4 +1,4 @@
-/* @import url('../../images/search.png'); */
+
 .Searchbar {
   top: 0;
   left: 0;
@@ -13,6 +13,7 @@
   padding-top: 12px;
   padding-bottom: 12px;
   color: #fff;
+
   background-color: #3f51b5;
   box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
     0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
@@ -28,7 +29,7 @@
   background-color: #fff;
   border-radius: 3px;
   overflow: hidden;
-      margin: 0 auto;
+      margin: 0 auto 20px auto;
 }
 
 .SearchFormButton {
