--- a/src/components/MoviePoster/MoviePoster.module.css
+++ b/src/components/MoviePoster/MoviePoster.module.css
@@ -173,6 +173,8 @@ aside {
   flex-direction: column;
 }
 .goBackBtn{
+  border: none;
+  background-color: transparent;
   position: fixed;
   top: 80px;
   left: 30px;
