--- a/src/components/MoviePoster/MoviePoster.module.css
+++ b/src/components/MoviePoster/MoviePoster.module.css
@@ -66,7 +66,7 @@ aside {
   flex-wrap: wrap;
   justify-content: space-between;
   width: 100%;
-  max-width: 500px;
+
   border: 1px solid white;
   border-radius: 10px;
   padding: 20px;
@@ -100,7 +100,7 @@ aside {
   justify-content: space-around;
   gap: 10px;
   text-align: center;
-  max-width: 500px;
+
   border: 1px solid white;
   border-radius: 10px;
   padding: 10px;
@@ -109,6 +109,15 @@ aside {
 .overview {
   max-width: 500px;
   font-size: 1.4rem;
+      max-height: 200px;
+    overflow: auto;
+      
+
+}
+
+.overview::-webkit-scrollbar{
+width: 0;
+
 }
 .topAside {
   display: flex;
@@ -127,6 +136,8 @@ aside {
   display: flex;
   flex-direction: column;
   gap: 10px;
+      width: 100%;
+    margin: 0 auto;
 }
 .bottomAside h4 {
   text-decoration: underline;
