--- a/src/components/Cast/Cast.module.css
+++ b/src/components/Cast/Cast.module.css
@@ -17,6 +17,7 @@
 .actorCard {
   width: 100%;
   padding: 10px;
+  cursor: pointer;
 
   border-radius: 10px;
   background-color: rgba(0, 0, 0, 0.65);
