--- a/src/components/MovieDetails/MovieDetails.module.css
+++ b/src/components/MovieDetails/MovieDetails.module.css
@@ -77,9 +77,7 @@ aside {
   object-fit: contain;
   height: 50px;
 
-
-    filter: grayscale(1) contrast(1.8) invert(1) brightness(1);
-  
+  filter: grayscale(1) contrast(1.8) invert(1) brightness(1);
 }
 
 .locations {
@@ -92,6 +90,10 @@ aside {
   bottom: 0;
   justify-content: flex-end;
   background-color: rgb(0, 0, 0);
+  max-width: 500px;
+  line-height: 22px;
+  height: 100%;
+      justify-content: end;
 }
 
 .stats {
@@ -109,15 +111,12 @@ aside {
 .overview {
   max-width: 500px;
   font-size: 1.4rem;
-      max-height: 200px;
-    overflow: auto;
-      
-
+  max-height: 200px;
+  overflow: auto;
 }
 
-.overview::-webkit-scrollbar{
-width: 0;
-
+.overview::-webkit-scrollbar {
+  width: 0;
 }
 .topAside {
   display: flex;
@@ -136,8 +135,8 @@ width: 0;
   display: flex;
   flex-direction: column;
   gap: 10px;
-      width: 100%;
-    margin: 0 auto;
+  width: 100%;
+  margin: 0 auto;
 }
 .bottomAside h4 {
   text-decoration: underline;
@@ -186,7 +185,7 @@ width: 0;
   max-width: 1334px;
   flex-direction: column;
 }
-.goBackBtn{
+.goBackBtn {
   border: none;
   background-color: transparent;
   position: fixed;
@@ -201,15 +200,12 @@ width: 0;
   border-radius: 50%;
   transition: all 0.3s ease;
   will-change: scale;
- filter: drop-shadow(0px 0px 10px #ffffff);
+  filter: drop-shadow(0px 0px 10px #ffffff);
   z-index: 99999999;
-
 }
-.goBackBtn:hover{
-  scale:1.1;
+.goBackBtn:hover {
+  scale: 1.1;
 }
-
-
 
 @media screen and (min-width: 758px) {
   .BG {
@@ -232,6 +228,10 @@ width: 0;
   }
   aside {
     justify-content: space-between;
+  }
+  .companies {
+    overflow-y: scroll;
+    height: 150px;
   }
 }
 @media screen and (min-width: 1200px) {
