--- a/src/components/MovieDetails/MovieDetails.module.css
+++ b/src/components/MovieDetails/MovieDetails.module.css
@@ -93,7 +93,7 @@ aside {
   max-width: 500px;
   line-height: 22px;
   height: 100%;
-      justify-content: end;
+      justify-content: flex-end;
 }
 
 .stats {
