--- a/src/components/CardItem/CardItem.module.css
+++ b/src/components/CardItem/CardItem.module.css
@@ -13,6 +13,7 @@
 .image {
   width: 100%;
   height: auto;
+
   object-fit: cover;
 }
 
@@ -70,6 +71,7 @@
 @media screen and (min-width: 600px) {
   .card {
     width: 200px;
+      height: 300px;
   }
 
 }
